Fixed spacing in mobile view

--- a/css/remple.css
+++ b/css/remple.css
@@ -24,6 +24,7 @@ body {
         float: none;
         text-align: center;
         line-height: 1.75em;
+        width: 100%;
     }
 
 	.nav-item {
@@ -33,5 +34,6 @@ body {
         display: block;
         text-align: center;
         line-height: 1.75em;
+        width: 100%;
     }
 }
